# infrakit

./: .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SUPPORT.md  constraint-driven.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  release.yml
.github/workflows/scripts/: get-next-version.sh
docs/: index.md  installation.md  local-development.md  quickstart.md  upgrade.md
evals/: README.md  cases.py  run.py  scorer.py
evals/fixtures/insecure-cloudformation/: template.yaml
evals/fixtures/insecure-terraform/: main.tf
examples/: README.md
examples/cloudformation/: README.md
examples/cloudformation/.infrakit/: coding-style.md  context.md  tagging-standard.md
examples/cloudformation/templates/s3-secure-bucket/: README.md  template.yaml
examples/cloudformation/templates/s3-secure-bucket/parameters/: dev.json  prod.json
examples/crossplane/: README.md
examples/crossplane/.infrakit/: coding-style.md  context.md
examples/crossplane/compositions/xcassandra-keyspace/: README.md  composition.yaml  definition.yaml
examples/crossplane/compositions/xcassandra-keyspace/examples/: claim-dev.yaml  claim-prod.yaml
examples/terraform/: README.md
examples/terraform/.infrakit/: coding-style.md  context.md
src/infrakit_cli/: __init__.py  cli.py  iac_config.py  skills.py  template_renderer.py
templates/: project-context-template.md  vscode-settings.json
templates/agent_personas/: cloud_architect.md
templates/commands/: analyze.md  architect-review.md  security-review.md  setup.md  status.md
templates/iac/_shared/commands/: quick_fix.md
templates/iac/cloudformation/: profile.yaml
templates/iac/cloudformation/agent_personas/: cloudformation_engineer.md
templates/iac/cloudformation/assets/: coding-style-template.md
templates/iac/cloudformation/commands/: create_cloudformation_code.md  implement.md  plan.md  quick_fix.md  review.md  setup-coding-style.md  update_cloudformation_code.md
templates/iac/crossplane/: profile.yaml
templates/iac/crossplane/agent_personas/: crossplane_engineer.md
templates/iac/crossplane/assets/: coding-style-template.md
templates/iac/crossplane/commands/: implement.md  plan.md  quick_fix.md  review.md  setup-coding-style.md
templates/iac/terraform/: profile.yaml
templates/iac/terraform/agent_personas/: terraform_engineer.md
templates/iac/terraform/assets/: coding-style-template.md
templates/iac/terraform/commands/: implement.md  plan.md  quick_fix.md  review.md  setup-coding-style.md
tests/: test_cloudformation_iac_config.py  test_cloudformation_templates.py  test_evals.py  test_shared_commands.py  test_template_renderer.py  test_terraform_init_command.py
